[package]
name = "tranhuyducseven-rbac"
version = "0.2.0"
authors = ["tranhuyducseven"]
edition = "2022"
repository = "https://github.com/tranhuyducseven/substrate-rbac"
description = "This package is fixed from [substrate-rbac](https://github.com/gautamdhameja/substrate-rbac)"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]



[dependencies]
serde = {package = "serde", version = "1.0.126", features = ["derive"]}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"}
frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
frame-benchmarking = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", optional = true }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-10", version = "4.0.0-dev"}
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }



[dev-dependencies]
sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }


[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",

	
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
