[package]
name = "pallet-rbac"
version = "0.0.2"
authors = ["tranhuyducseven"]
edition = "2021"
repository = "https://github.com/tranhuyducseven/pallet-rbac"
description = "This repository is the updated version for [substrate-rbac](https://github.com/gautamdhameja/substrate-rbac)"
readme = "README.md"
license = "Apache-2.0"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
serde = {package = "serde", version = "1.0.160", features = ["derive"]}

codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }


scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }

frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }

frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }

sp-std = {version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40"}

sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
arrayvec = "0.7.2"



[dev-dependencies]
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }


[features]
default = ["std"]
std = ["codec/std", "scale-info/std", "frame-support/std", "frame-system/std", "frame-benchmarking/std", "sp-std/std", "sp-io/std", "sp-runtime/std"]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
